--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,18 +11,27 @@ authors = [
     {name = "Darwin Stiven Herrera Cartagena", email = "darwinsherrerac@gmail.com"}
 ]
 requires-python = ">=3.7"
-dependencies = []
+dependencies = [
+    "bisslog>=0.0.7",
+    "bisslog-schema>=0.0.3",
+    "flask"
+]
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent"
 ]
 keywords = ["hexagonal", "adapters", "bisslog", "flask"]
+
 [project.urls]
 Homepage = "https://github.com/darwinhc/bisslog-flask"
 
+[project.optional-dependencies]
+websocket = ["flask-socketio"]
+cors = ["flask-cors>=6.0.0"]
+
 [tool.setuptools.packages.find]
 include = ["bisslog_flask", "bisslog_flask.*"]
+
 [tool.setuptools_scm]
 version_scheme = "post-release"
 local_scheme = "no-local-version"
-
